# analytics-datacube-processor

./: .env  Dockerfile  README.md  byoa.toml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: lambda.yml
manifests/: analytics-datacube-svc.yaml  analytics-datacube.yaml
notebooks/: analytics_datacube.ipynb  analytics_datacube_processor.ipynb
src/: main.py
src/analytics_datacube/: processor.py  utils.py
src/analytics_datacube_processor/: processor.py  utils.py
src/api/: api.py  constants.py
src/cloud_storage/: cloud_storage_azure.py
src/data/: processor_input_example.json
src/schemas/: input_schema.py  output_schema.py
src/utils/: file_utils.py
